--- a/src/index.css
+++ b/src/index.css
@@ -391,3 +391,6 @@ input[type="number"] {
 }
 
 
+.contain-content {
+  contain: content;
+}
